--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="h">
-        <div class="eight"><img class="A" src="c:\Users\ELCOT\Downloads\circle.jpeg" alt="">Circle</div>
+        <div class="eight"><img class="A" src="./image/image.jpeg" alt="">Circle</div>
         <div class="one">Home</div>
         <div class="one">Pricing</div>
         <div class="one">Testimonials</div>
@@ -21,12 +21,12 @@
         <h1><center><strong>A powerful online engagement tool <br>that's intuitive and simple to use.</strong></center></h1>
         <p ><center>With steller one-click reports and unmatched support,see how <br>Circle will make a difference in your business.</center></p>
         <center><button style="margin-left: 1%;" type="button">Get Started free ></button></center>
-        <center><img src="c:\Users\ELCOT\Pictures\Annotation (25).png" width="300" height="250" alt=" "></center>
+        <center><img src="./image/image1.png" width="300" height="250" alt=" "></center>
     </div>
     <button style="border-radius: 50px; margin-top: 200px;" type="button" class="C">Customer</button>
     <div style="display: flex;justify-content: center;margin-top: 20px;">Trusted by <strong>100,000+customers</strong>  in 90+countries</div>
     <div class="Hi" style="margin-left: 22%;">
-       <img src="c:\Users\ELCOT\Pictures\vlcsnap-2020-03-31-01h09m23s993.png" width="720" height="470"alt="">
+       <img src="./image/image2.png" width="720" height="470"alt="">
     </div>
     <div class="D">
         <div style="background-color: rgb(140, 179, 212);">
@@ -36,17 +36,17 @@
             <br><p>Circle has 100+integrations with tools you <br> already use and love</p>
             <button type="button">Get Started free</button>
         </div>
-        <img src="c:\Users\ELCOT\Pictures\vlcsnap-2020-03-31-00h37m20s673.png" style="border-radius: 10px;" alt="" height="350px" width="400px">
+        <img src="./image/image3.png" style="border-radius: 10px;" alt="" height="350px" width="400px">
     </div>
     <center><button style="border-radius: 10px;margin-top: 100px;" type="button">Awards</button></center>
     <center><p>An <strong>award winning</strong>platform,<strong>loved by customers.</strong></p></center>
     <div class="gi">
-        <img src="c:\Users\ELCOT\Pictures\Annotation (4).png" width="250" height="250" alt="" class="gr">
-        <img src="c:\Users\ELCOT\Pictures\Annotation (22).png" width="250" height="250" alt="" class="gr">
-        <img src="c:\Users\ELCOT\Pictures\Annotation (14).png" width="250" height="250" alt="" class="gr">
-        <img src="c:\Users\ELCOT\Pictures\Annotation (27).png" width="250" height="250" alt="" class="gr">
-        <img src="c:\Users\ELCOT\Pictures\Annotation (5).png" width="250" height="250" alt="" class="gr">
-        <img src="c:\Users\ELCOT\Pictures\Annotation (24).png" width="250" height="250" alt="" class="gr">
+        <img src="./image/image4.png" width="250" height="250" alt="" class="gr">
+        <img src="./image/image5.png" width="250" height="250" alt="" class="gr">
+        <img src="./image/image6.png" width="250" height="250" alt="" class="gr">
+        <img src="./image/image7.png" width="250" height="250" alt="" class="gr">
+        <img src="./image/image8.png" width="250" height="250" alt="" class="gr">
+        <img src="./image/image9.png" width="250" height="250" alt="" class="gr">
         <hr>
     </div>
     <center><button type="button" style="border-radius: 10px; margin-top: 100px;">BUILT FOR PEOPLE</button></center>
@@ -67,7 +67,7 @@
     built-in automation and integration.</p>
     <button type="button">Get started free</button>
         </div>
-        <img src="c:\Users\ELCOT\Pictures\Annotation (28).png" width="250" height="250" alt="">
+        <img src="./image/image10.png" width="250" height="250" alt="">
     </div>
     <div class="CCC" style="border-radius: 20px;">
         <div>
@@ -76,7 +76,7 @@
             <p>See how<br>customers<br><strong>drive impact</strong></p><br>
             <button type="button">See case studios</button>
         </div>
-        <iframe width="550" height="400" src="d:\PERSONAL\CARTOON\BEN 10\ben 10 ultimate\S01 E11 - Map Of Infinity.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="550" height="400" src="./video/video-1.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <img style="height: 300px; border-radius: 10px; width: 300px;margin-top: 200px; z-index: 1;position: absolute; left: 900px;" src="c:\Users\ELCOT\Pictures" alt="">
     </div>
     <div class="DDD">
@@ -86,13 +86,13 @@
             <p style="color: rgb(47, 109, 109);">Check out Sogolytics enterprise feedback and <br>experience management platform</p>
             <div style="display: flex; gap: 20px; margin-left: 0px;"><button type="button">Learn more</button><button type="button">Schedule a consultation</button></div>
         </div>
-        <img src="c:\Users\ELCOT\Pictures\vlcsnap-2020-03-31-00h11m12s672.png" alt="">
+        <img src="./image/image11.png" alt="">
     </div>
     <center><button type="button" style="border-radius: 10px;">Resourses</button>
     <p><strong>Stay</strong> in the know <strong>know</strong></p></center><br><br>
     <div class="EEE" style="height: 600px;">
         <div style="background-color:white">
-            <img src="c:\Users\ELCOT\Pictures\Annotation (9).png" width="250" height="250" alt=""><br>
+            <img src="./image/image12.png" width="250" height="250" alt=""><br>
             <strong>Excepteur sint occaecat cupidatat <br> non proident</strong>
             <p>Name enime ipsam voluptatem quia <br> voluotas sit aspernatur aut odit aut fugit,<br>
             sed quia consequuntur magni dolores eos</p>
@@ -101,7 +101,7 @@
             <button type="button">Read more</button>
         </div>
         <div  style="background-color:white">
-            <img src="c:\Users\ELCOT\Pictures\Annotation (10).png" width="250" height="250" alt=""><br>
+            <img src="./image/image13.png" width="250" height="250" alt=""><br>
             <strong>Quis nostrum exercitationem ullam <br>corporis suscipit laboriosam </strong><br>
 
             <p> Ut enim ad minima veniam, quis nostrum <br>exercitationem ullam corporis suscipit <br>laboriosam.<br><br>
@@ -109,7 +109,7 @@
                 <button type="button">Read more</button>
         </div>
         <div style="background-color:white">
-            <img src="c:\Users\ELCOT\Pictures\Annotation (11).png" width="250" height="250" alt=""><br>
+            <img src="./image/image14.png" width="250" height="250" alt=""><br>
             <strong>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</strong>
             <p>Coluptatem accusantium doloremque <br>laudantium, totam rem aperiam <br><br>
                 Aaque ipsa quae ab illo inventore veritatis et <br>quasi architecto beatae vitae dicta sunt explicabo.</p><br><br>
@@ -117,7 +117,7 @@
             </div>
     </div>
     <div class="FFF" style="height: 500px; width: 100%; background-color:rgb(180, 235, 155);">
-        <img style="height: 350px; width: 450px; border-radius: 10px;margin-top: 80px;margin-left: 80px;" src="c:\Users\ELCOT\Pictures\Annotation (5).png" alt="">
+        <img style="height: 350px; width: 450px; border-radius: 10px;margin-top: 80px;margin-left: 80px;" src="./image/image8.png" alt="">
         <div>
             <table>
                 <tr>
