--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="h">
-        <div class="eight"><img class="A" src="./image/image.jpeg" alt="">Circle</div>
+        <div class="eight"><img class="A" src="./image/image0.jpeg" alt="">Circle</div>
         <div class="one">Home</div>
         <div class="one">Pricing</div>
         <div class="one">Testimonials</div>
@@ -76,7 +76,7 @@
             <p>See how<br>customers<br><strong>drive impact</strong></p><br>
             <button type="button">See case studios</button>
         </div>
-        <iframe width="550" height="400" src="./video/video-1.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="550" height="400" src="./video/video1.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <img style="height: 300px; border-radius: 10px; width: 300px;margin-top: 200px; z-index: 1;position: absolute; left: 900px;" src="c:\Users\ELCOT\Pictures" alt="">
     </div>
     <div class="DDD">
